--- a/firmware-arduino/platformio.ini
+++ b/firmware-arduino/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:seeed_xiao_esp32s3]
 platform = espressif32 @ 6.10.0
-board = esp32-s3-devkitc-1
+board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
 
@@ -25,8 +25,8 @@ lib_deps =
 ; board_build.arduino.memory_type = qio_opi
 ; board_build.flash_mode = qio
 ; board_build.prsam_type = opi
-board_upload.flash_size = 16MB
-board_upload.maximum_size = 16777216
+;board_upload.flash_size = 16MB
+;board_upload.maximum_size = 16777216
 board_build.filesystem = spiffs
 board_build.partitions = partition.csv
 upload_protocol = esptool
@@ -39,4 +39,5 @@ build_flags =
     -std=gnu++17
     -D CORE_DEBUG_LEVEL=5
     -D DEBUG_ESP_PORT=Serial
-    -D TOUCH_SENSOR_ENABLE=1        ; Enable touch sensor driver
+    -D TOUCH_SENSOR_ENABLE=0        ; Enable touch sensor driver
+
